Fixed homepage alignment

--- a/app/resources/style/body.scss
+++ b/app/resources/style/body.scss
@@ -13,6 +13,7 @@
   position: relative;
   padding: 0;
   margin: 0 3%;
+  margin-top: 135px;
   width: 100%;
 }
 
